--- a/small.html
+++ b/small.html
@@ -78,9 +78,9 @@
 				<p>While working at the Eli Whitney Museum and Workshop, I spent time designing and developing new projects to be built by kids in our summer camps. </p>
 				<h3>3D Zoetropes</h3>
 				<p>One program I helped to develop explored early forms of animation, inspired by some of Eadweard Muybidge's work 150 years ago. Using simple pulleys and an optical coupler, we created a simple zoetrope, and explored some of the ways that 3D objects could be simply animated. See some examples below. December, 2018 </p>
-				<p><video width="600"src="assets/images/zoetrope1.mov" alt=""autoplay loop muted></p>
-                <p><video width="600"src="assets/images/zoetrope2.mov" alt=""autoplay loop muted></p>
-                <p><video width="600"src="assets/images/zoetrope3.mov" alt=""autoplay loop muted></p>
+				<p><video width="600"src="assets/images/zoetrope1.MOV" alt=""autoplay loop muted></p>
+                <p><video width="600"src="assets/images/zoetrope2.MOV" alt=""autoplay loop muted></p>
+                <p><video width="600"src="assets/images/zoetrope3.MOV" alt=""autoplay loop muted></p>
 				<p><video width="600"src="assets/images/zoetrope4.mov" alt=""autoplay loop muted></p>
                 <p><video width="600"src="assets/images/zoetrope 5.mov" alt=""autoplay loop muted></p>
                 <h3>Spinning Tops</h3>
@@ -89,7 +89,7 @@
                 <p><video width="600"src="assets/images/tops1.mov" alt=""autoplay loop muted></p>
                 <p><video width="600"src="assets/images/tops2.mov" alt=""autoplay loop muted></p>
                 <p><video width="600"src="assets/images/tops3.mov" alt=""autoplay loop muted></p>
-                <p><video width="600"src="assets/images/tops4.mov" alt=""autoplay loop muted></p>
+                <p><video width="600"src="assets/images/tops4.MOV" alt=""autoplay loop muted></p>
                 <h3>CAD Designs</h3>
 
                 <p>Here are some Solidworks designs and animations from my CAD class (MENG 400). Spring, 2023</p>
