--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		
 		<div class="row section topspace">
 			<div class="col-md-12">
-				<p class="lead text-center text-muted"> Welcome to my portfolio! I am a third year Mechanical Engineering & Energy Studies student at Yale University, with an interest in sustainible design. Check out some of my work!
+				<p class="lead text-center text-muted"> Welcome to my portfolio! I am a third year Mechanical Engineering & Energy Studies student at Yale University, with an interest in sustainable design. Check out some of my work!
 			</div>
 		</div> <!-- / section -->
 		
