--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<title>Jonah Heiser</title>
 
-	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
+	<link rel="shortcut icon" href="assets/images/guy.jpg">
 	
 	<!-- Bootstrap -->
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
