--- a/Orrery.html
+++ b/Orrery.html
@@ -27,7 +27,7 @@
 	<div id="head" class="parallax" parallax-speed="1">
 		<h1 id="logo" class="text-center">
 			<span class="title">Jonah Heiser</span>
-			<span class="tagline">A mystery person<br>
+			<span class="tagline">Yale MENG 2025<br>
 				<a href="">j.heiser@yale.edu</a></span>
 		</h1>
 	</div>
